styled landing page, added mobile queries to flex

--- a/index.html
+++ b/index.html
@@ -3,35 +3,64 @@
 <html lang="en">
 
 <head>
+
+    <script src="https://kit.fontawesome.com/8f5de4e242.js" crossorigin="anonymous"></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIY Tracker - Home</title>
 
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
 
     <section class="navigation">
-        <a href="#" class="logoText">DIY Tracker</a>
+        <a href="#" class="logoText">DIY Tracker<i class="fas fa-hammer"></i></a>
         <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
+            <a href="#">Sign In</a>
+            <a href="#">Sign Up</a>
         </nav>
     </section>
     <div class="main-content">
         <!-- Main stuff starts here. -->
         <section class="promo">
-            <!-- This section is for promotional hero images, carousels... etc. -->
+            <!-- This section is for promotional hero images/banners, carousels... etc. -->
+            <div class="banner"></div>
+            <h1>So easy you can do it yourself!</h1>
+            <div>
+                <h2>Our Mission:</h2>
+                <p>Mission statement ad blanditiis, voluptate dolore assumenda tempore ea quod, minima deleniti
+                    laboriosam
+                    sit quas doloremque id sunt corporis impedit pariatur optio autem. Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Deserunt debitis ullam, molestiae quo iure praesentium repellat natus
+                    esse quidem sit mollitia exercitationem dolorum libero dolorem deleniti dignissimos ipsum rem
+                    molestias!</p>
+            </div>
         </section>
         <section class="main">
             <!-- Body paragraphs and non-promo button containers go here -->
+            <div>
+                <h2>On desktop, i'm on the left!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quidem, ad accusamus ex, quae aliquam
+                    laboriosam ratione similique excepturi atque asperiores, magnam corrupti dolore id quibusdam est
+                    saepe quia? Suscipit!</p>
+            </div>
+            <div class="last">
+                <h2>On mobile, i'm below the other one!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti praesentium assumenda tenetur
+                    eius blanditiis rem. Ex, debitis sunt? Porro, aspernatur iste! Totam rem deleniti quos qui quis
+                    itaque fuga.</p>
+            </div>
         </section>
     </div>
     <footer>
         <p>This is a footer, with footer things!</p>
-        <h3>Copyright Footer, circa 2019. &copy;</h3>
+        <h3>Copyright DIY Tracker, 2019. &copy;</h3>
     </footer>
 </body>
 
