cleaned up mobile view

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- This section is for promotional hero images/banners, carousels... etc. -->
             <div class="banner"></div>
             <h1>So easy you can do it yourself!</h1>
-            <p>Sign up for instant access to THOUSANDS of DIY projects!</p>
+            <p class="center">Get instant access to THOUSANDS of DIY projects by signing up with DIY-Tracker!</p>
             <a href="#" class="bigButton">Sign Up</a>
             <p>Already have an account? <a href="">Sign In</a></p>
         </section>
