team member list styling, added geese

--- a/about.html
+++ b/about.html
@@ -55,6 +55,35 @@
                     itaque fuga.</p>
             </div>
         </section>
+        <section class="team">
+            <div class="personContainer">
+                <h1>Goose</h1>
+                <div>
+                    <img src="img\goose.jpg" alt="">
+                    <p>Lorem, ipsum dolor sit honk consectetur adipisicing elit. Honk consequatur, honk honk veniam
+                        honkety aliquam dignissimos honk omnis praesentium honk natus nam neque corporis illo ducimus
+                        doloribus odit hooOonNK consequuntur!</p>
+                </div>
+            </div>
+            <div class="personContainer">
+                <h1>Goose 2</h1>
+                <div>
+                    <img src="img\goose.jpg" alt="">
+                    <p>Lorem, ipsum dolor sit honk consectetur adipisicing elit. Honk consequatur, honk honk veniam
+                        honkety aliquam dignissimos honk omnis praesentium honk natus nam neque corporis illo ducimus
+                        doloribus odit hooOonNK consequuntur!</p>
+                </div>
+            </div>
+            <div class="personContainer">
+                <h1>Goose 3</h1>
+                <div>
+                    <img src="img\goose.jpg" alt="">
+                    <p>Lorem, ipsum dolor sit honk consectetur adipisicing elit. Honk consequatur, honk honk veniam
+                        honkety aliquam dignissimos honk omnis praesentium honk natus nam neque corporis illo ducimus
+                        doloribus odit hooOonNK consequuntur!</p>
+                </div>
+            </div>
+        </section>
     </div>
     <footer>
         <p>This is a footer, with footer things!</p>
