marketing page d-d-done, formatted team member cells and removed geese

--- a/about.html
+++ b/about.html
@@ -30,63 +30,105 @@
         <section class="hero">
             <div class="about-banner"></div>
             <h1>About Us</h1>
-            <div>
-                <h2>Our Mission:</h2>
-                <p>Mission statement ad blanditiis, voluptate dolore assumenda tempore ea quod, minima deleniti
-                    laboriosam
-                    sit quas doloremque id sunt corporis impedit pariatur optio autem. Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Deserunt debitis ullam, molestiae quo iure praesentium repellat natus
-                    esse quidem sit mollitia exercitationem dolorum libero dolorem deleniti dignissimos ipsum rem
-                    molestias!</p>
-            </div>
-        </section>
-        <section class="main">
-            <!-- Body paragraphs and non-promo button containers go here -->
-            <div>
-                <h2>On desktop, i'm on the left!</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quidem, ad accusamus ex, quae aliquam
-                    laboriosam ratione similique excepturi atque asperiores, magnam corrupti dolore id quibusdam est
-                    saepe quia? Suscipit!</p>
-            </div>
-            <div class="last">
-                <h2>On mobile, i'm below the other one!</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti praesentium assumenda tenetur
-                    eius blanditiis rem. Ex, debitis sunt? Porro, aspernatur iste! Totam rem deleniti quos qui quis
-                    itaque fuga.</p>
-            </div>
-        </section>
-        <section class="team">
-            <div class="personContainer">
-                <h1>Goose</h1>
+            <section class="main">
+                <!-- Body paragraphs and non-promo button containers go here -->
                 <div>
-                    <img src="img\goose.jpg" alt="">
-                    <p>Lorem, ipsum dolor sit honk consectetur adipisicing elit. Honk consequatur, honk honk veniam
-                        honkety aliquam dignissimos honk omnis praesentium honk natus nam neque corporis illo ducimus
-                        doloribus odit hooOonNK consequuntur!</p>
+                    <h2>On desktop, i'm on the left!</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quidem, ad accusamus ex, quae
+                        aliquam
+                        laboriosam ratione similique excepturi atque asperiores, magnam corrupti dolore id quibusdam est
+                        saepe quia? Suscipit!</p>
                 </div>
-            </div>
-            <div class="personContainer">
-                <h1>Goose 2</h1>
-                <div>
-                    <img src="img\goose.jpg" alt="">
-                    <p>Lorem, ipsum dolor sit honk consectetur adipisicing elit. Honk consequatur, honk honk veniam
-                        honkety aliquam dignissimos honk omnis praesentium honk natus nam neque corporis illo ducimus
-                        doloribus odit hooOonNK consequuntur!</p>
+                <div class="last">
+                    <h2>On mobile, i'm below the other one!</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti praesentium assumenda
+                        tenetur
+                        eius blanditiis rem. Ex, debitis sunt? Porro, aspernatur iste! Totam rem deleniti quos qui quis
+                        itaque fuga.</p>
                 </div>
-            </div>
-            <div class="personContainer">
-                <h1>Goose 3</h1>
-                <div>
-                    <img src="img\goose.jpg" alt="">
-                    <p>Lorem, ipsum dolor sit honk consectetur adipisicing elit. Honk consequatur, honk honk veniam
-                        honkety aliquam dignissimos honk omnis praesentium honk natus nam neque corporis illo ducimus
-                        doloribus odit hooOonNK consequuntur!</p>
+            </section>
+            <h1>The DIY Tracker team:</h1>
+            <section class="team">
+                <div class="personContainer">
+                    <h1>Leslie Rodriguez</h1>
+                    <div class="personHalf">
+                        <img src="img\leslie-pfp.jpg" alt="">
+                        <div class="infoContainer">
+                            <h2>Project Lead</h2>
+                            <p>As the Project Lead and Java Spring REST API Developer, Leslie was responsible for the
+                                application's backend as well as overseeing and managing the project.</p>
+                        </div>
+                    </div>
+                    <div class="buttonBar">
+                        <a href="https://rleslie1015.github.io/Portfolio/">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/leslie-rodriguez1994/">
+                            <i class="fas fa-info-circle"></i>
+                        </a>
+                    </div>
                 </div>
-            </div>
-        </section>
+                <div class="personContainer">
+                    <h1>Tanner Hawkins</h1>
+                    <div class="personHalf">
+                        <img src="img\tanner-hawkins-pfp.jpg" alt="">
+                        <div class="infoContainer">
+                            <h2>UI Developer</h2>
+                            <p>This is information!</p>
+                        </div>
+                    </div>
+                    <div class="buttonBar">
+                        <a href="https://github.com/Dournbrood">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="personContainer">
+                    <h1>Tanner Hawkins</h1>
+                    <div class="personHalf">
+                        <img src="img\tanner-hawkins-pfp.jpg" alt="">
+                        <div class="infoContainer">
+                            <h2>UI Developer</h2>
+                            <p>This is information!</p>
+                        </div>
+                    </div>
+                    <div class="buttonBar">
+                        <a href="https://github.com/Dournbrood"><i class="fab fa-github"></i></a>
+                        <a href=""><i class="fas fa-info-circle"></i></a>
+                    </div>
+                </div>
+                <div class="personContainer">
+                    <h1>Tanner Hawkins</h1>
+                    <div class="personHalf">
+                        <img src="img\tanner-hawkins-pfp.jpg" alt="">
+                        <div class="infoContainer">
+                            <h2>UI Developer</h2>
+                            <p>This is information!</p>
+                        </div>
+                    </div>
+                    <div class="buttonBar">
+                        <a href="https://github.com/Dournbrood"><i class="fab fa-github"></i></a>
+                        <a href=""><i class="fas fa-info-circle"></i></a>
+                    </div>
+                </div>
+                <div class="personContainer">
+                    <h1>Tanner Hawkins</h1>
+                    <div class="personHalf">
+                        <img src="img\tanner-hawkins-pfp.jpg" alt="">
+                        <div class="infoContainer">
+                            <h2>UI Developer</h2>
+                            <p>This is information!</p>
+                        </div>
+                    </div>
+                    <div class="buttonBar">
+                        <a href="https://github.com/Dournbrood"><i class="fab fa-github"></i></a>
+                        <a href=""><i class="fas fa-info-circle"></i></a>
+                    </div>
+                </div>
+
+            </section>
     </div>
     <footer>
-        <p>This is a footer, with footer things!</p>
         <h3>Copyright DIY Tracker, 2019. &copy;</h3>
     </footer>
 </body>
