--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
             <!-- This section is for promotional hero images/banners, carousels... etc. -->
             <div class="banner"></div>
             <h1>So easy you can do it yourself!</h1>
+            <div>
+                <h2>Our Mission:</h2>
+                <p>Our goal is to provide a platform where people can view and share do-it-yourself projects that
+                    they're passionate or curious about. Think pinterest for dog houses!</p>
+            </div>
             <p class="center">Get instant access to THOUSANDS of DIY projects by signing up with DIY-Tracker!</p>
             <a href="#" class="bigButton">Sign Up</a>
             <p>Already have an account? <a href="">Sign In</a></p>
         </section>
     </div>
     <footer>
-        <p>This is a footer, with footer things!</p>
         <h3>Copyright DIY Tracker, 2019. &copy;</h3>
     </footer>
 </body>
