populated team member info, added removal of final goose

--- a/about.html
+++ b/about.html
@@ -69,17 +69,39 @@
                     </div>
                 </div>
                 <div class="personContainer">
-                    <h1>Tanner Hawkins</h1>
+                    <h1>Travis Laudahl</h1>
                     <div class="personHalf">
-                        <img src="img\tanner-hawkins-pfp.jpg" alt="">
+                        <img src="img\travis-pfp.jpg" alt="">
                         <div class="infoContainer">
-                            <h2>UI Developer</h2>
-                            <p>This is information!</p>
+                            <h2>Web React Developer</h2>
+                            <p>Currently enrolled in Lambda School taking the Full Stack Web Development course with an
+                                expected graduation of 2020.</p>
                         </div>
                     </div>
                     <div class="buttonBar">
-                        <a href="https://github.com/Dournbrood">
+                        <a href="https://github.com/tlaudahl">
                             <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/travis-laudahl/">
+                            <i class="fas fa-info-circle"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="personContainer">
+                    <h1>Cory Ortega</h1>
+                    <div class="personHalf">
+                        <img src="img\cory-pfp.jpg" alt="">
+                        <div class="infoContainer">
+                            <h2>Web React Developer</h2>
+                            <p>Cory is a full-stack web development student.</p>
+                        </div>
+                    </div>
+                    <div class="buttonBar">
+                        <a href="https://github.com/coryortega">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://coryortega.github.io/portfolio-website/">
+                            <i class="fas fa-info-circle"></i>
                         </a>
                     </div>
                 </div>
@@ -89,7 +111,8 @@
                         <img src="img\tanner-hawkins-pfp.jpg" alt="">
                         <div class="infoContainer">
                             <h2>UI Developer</h2>
-                            <p>This is information!</p>
+                            <p>A student enrolled in Lambda's Web Developent course, Tanner developed a UI for this
+                                project!</p>
                         </div>
                     </div>
                     <div class="buttonBar">
@@ -98,31 +121,17 @@
                     </div>
                 </div>
                 <div class="personContainer">
-                    <h1>Tanner Hawkins</h1>
+                    <h1>Doni Nguyen</h1>
                     <div class="personHalf">
-                        <img src="img\tanner-hawkins-pfp.jpg" alt="">
+                        <img src="img\doni-pfp.jpg" alt="">
                         <div class="infoContainer">
                             <h2>UI Developer</h2>
-                            <p>This is information!</p>
+                            <p>A student enrolled in Lambda's Web Developent course, Doni developed a UI for this
+                                project!</p>
                         </div>
                     </div>
                     <div class="buttonBar">
-                        <a href="https://github.com/Dournbrood"><i class="fab fa-github"></i></a>
-                        <a href=""><i class="fas fa-info-circle"></i></a>
-                    </div>
-                </div>
-                <div class="personContainer">
-                    <h1>Tanner Hawkins</h1>
-                    <div class="personHalf">
-                        <img src="img\tanner-hawkins-pfp.jpg" alt="">
-                        <div class="infoContainer">
-                            <h2>UI Developer</h2>
-                            <p>This is information!</p>
-                        </div>
-                    </div>
-                    <div class="buttonBar">
-                        <a href="https://github.com/Dournbrood"><i class="fab fa-github"></i></a>
-                        <a href=""><i class="fas fa-info-circle"></i></a>
+                        <a href="https://github.com/DoniNguyen"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
 
