populated relevant info

--- a/about.html
+++ b/about.html
@@ -33,18 +33,10 @@
             <section class="main">
                 <!-- Body paragraphs and non-promo button containers go here -->
                 <div>
-                    <h2>On desktop, i'm on the left!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quidem, ad accusamus ex, quae
-                        aliquam
-                        laboriosam ratione similique excepturi atque asperiores, magnam corrupti dolore id quibusdam est
-                        saepe quia? Suscipit!</p>
-                </div>
-                <div class="last">
-                    <h2>On mobile, i'm below the other one!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti praesentium assumenda
-                        tenetur
-                        eius blanditiis rem. Ex, debitis sunt? Porro, aspernatur iste! Totam rem deleniti quos qui quis
-                        itaque fuga.</p>
+                    <h2>Our Product</h2>
+                    <p>So what exactly is DIY Tracker supposed to be? Well, our team noticed a supreme lack of
+                        project-tracking apps that let you share ideas, so we decided to fill that void. Now you can
+                        track, search and submit all in one place!</p>
                 </div>
             </section>
             <h1>The DIY Tracker team:</h1>
