hooked appropriate buttons to application

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     they're passionate or curious about. Think pinterest for dog houses!</p>
             </div>
             <p class="center">Get instant access to THOUSANDS of DIY projects by signing up with DIY-Tracker!</p>
-            <a href="#" class="bigButton">Sign Up</a>
-            <p>Already have an account? <a href="">Sign In</a></p>
+            <a href="https://diy-tracker.netlify.com/register" class="bigButton">Sign Up</a>
+            <p>Already have an account? <a href="https://diy-tracker.netlify.com/">Sign In</a></p>
         </section>
     </div>
     <footer>
