--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="#">About</a>
-            <a href="#">Sign In</a>
-            <a href="#">Sign Up</a>
+            <a href="https://diy-tracker.netlify.com/">Sign In</a>
+            <a href="https://diy-tracker.netlify.com/register">Sign Up</a>
         </nav>
     </section>
     <div class="main-content">
